# qtdemo

myqt-vtk/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  README.txt  custommath.cxx  custommath.h  drawarea.cxx  drawarea.h  errorwindow.cxx  errorwindow.h  main.cxx  mainwindow.cxx  mainwindow.cxx~  mainwindow.h  point.h  polygoncombobox.h  twoDOpacityFunction.cxx  twoDOpacityFunction.h  vtkQTWindow.cxx  vtkQTWindow.h  vtkstuff.h  vtkstuff.h~  vtktestquadric.cxx  vtktestquadric.cxx~  vtkwindow.cxx  vtkwindow.h
myqt-vtk/Qvis/: Qvis2DTransferFunctionWidget.cpp  Qvis2DTransferFunctionWidget.h  QvisAbstractOpacityBar.cpp  QvisAbstractOpacityBar.h  QvisColourBar.cpp  QvisColourBar.h  pqDoubleEdit.cxx  pqTransferFunctionDialog.cxx  pqTransferFunctionDialog.h  pqTransferFunctionDialog.ui  pqTransferFunctionEditor.cxx  pqTransferFunctionEditor.h  pqTransferFunctionEditor.ui
